- NEW pom.xml - mac user friendly - Game UI Update - winning screen, losing screen, battle screen, creation screen - Actor update - wizards are only allowed 5 spells at a time